2003-10-12  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (Scheme):  Update isEq initialization.

2003-10-09  Per Bothner  <per@bothner.com>

	* kawa/standard/read.java (apply1):  Use Procedure's getName
	method rather than the deprecated name.

2003-10-08  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Use define_field to
	define 'values-append', since it allows better optimization.

	* kawa/standard/require.java (scanForDefinitions):  Split most into
	new method importDefinitions - used for XQuery modules.
	(importDefinitions):  New static method.  Take module namespace.
	Note if decl is a procedure decl.

	* kawa/standard/Scheme.java (<init>):  Specify field for "ash".

	* kawa/lang/SetFieldProc.java:  Use Values.empty directly instead of
	via Interpreter.voidObject.

2003-10-02  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java, kawa/standard/load.java,
	kawa/standard/sleep.java:  Use Values.empty directly instead of
	Interpreter's voidObject field
	* kawa/repl.java, kawa/standard/string2number.java:  Use Boolean
	FALSE/TRUE directly instead of via Scheme or Interpreter field.

2003-09-23  Per Bothner  <per@bothner.com>

	* build.xml (build.selectjava):  Add FVector.java and LList.java.

2003-09-14  Per Bothner  <per@bothner.com>

	* configure.in (AC_LINK_FILES):  Add gnu/xquery/testsuite/outline.xml.

2003-09-08  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Resolve hygiene using
	getOriginalRef *before* resolving namespace prefix.
	Fixes Savannah bug #5113.

2003-09-03  Per Bothner  <per@bothner.com>

	* kawa/repl.java (processArgs): Set Compilation.defaultCallConvention.

2003-08-20  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Change definitions
	of positive? and modulo.
	* kawa/standard/modulo.java:  Remove - implemented in kawa.lib.numbers.
	* kawa/standard/positive_p.java:  Likewise.